fix column alignment

--- a/src/components/Event/Event.scss
+++ b/src/components/Event/Event.scss
@@ -4,6 +4,7 @@
 .event {
   display: flex;
   flex-direction: column;
+  align-items: center;
   &__subtitle {
     @include subtitle;
   }
